2011-06-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime.el (mime-entity-filename): When a result is got from entity
	header, decode it.

2011-06-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Merged from rfc2231-encoder branch.
	* eword-encode.el (eword-encode-Content-Type-field-body)
	(eword-encode-Content-Disposition-field-body): New functions.

	* mime-def.el (mime-attribute-char-regexp): Update for RFC2231.
	(mime-non-attribute-char-regexp): New constant.

	* mime-parse.el (mime-divide-extended-parameter)
	(mime-encode-extended-parameter, mime-divide-regular-parameter)
	(mime-encode-regular-parameter, mime-encode-parameters): New
	functions.

2011-05-16  David Maus  <dmaus@ictsoc.de>

	* md4.el (md4-make-step): Use new style backqoutes. Slipped
	through 2010-11-14.

2010-11-14  HAMANO Kiyoto  <khiker.mail@gmail.com>

	* sha1-el.el (sha1-F0, sha1-F1, sha1-F2, sha1-F3, sha1-S1)
	(sha1-S5, sha1-S30, sha1-OP, sha1-add-to-H): Use new style
	backquotes.

	* md5-el.el: Dto.

	* md4.el (md4-make-step): Dto.

	* hmac-def.el (define-hmac-function): Dto.

	* hex-util.el (hex-char-to-num, hex-char-to-char): Dto.

	* eword-encode.el (make-ew-rword, ew-rword-text)
	(ew-rword-charset, ew-rword-encoding, ew-rword-type): Dto.

2010-11-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-uri-parse-cid): Respect
	mime-field-parser-alist's value.

2010-08-05  Tetsurou Okazaki  <okazaki@be.to>

	* smtp.el (smtp-submit-package): Handle the case that
	`smtp-find-connection' returns nil in unwind forms.

2010-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* FLIM-CFG: Add emu subdirectory to load-path when LISPDIR is
	specified.  Suggested by Kazuhiro NISHIYAMA <zn@mbf.nifty.com>.

2010-03-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel-q-ccl.el (quoted-printable-ccl-decode-string)
	(q-encoding-ccl-decode-string): Use ccl-execute-on-string() when
	encoder for CCL coding system is broken.
	(quoted-printable-ccl-decode-region)
	(quoted-printable-ccl-write-decoded-region): Use